[gd_scene load_steps=9 format=3 uid="uid://bluuiqjvnij0m"]

[ext_resource type="Script" path="res://Scripts/npc_template.gd" id="1_67dak"]
[ext_resource type="PackedScene" uid="uid://q531p4y0s8sh" path="res://Scenes/Systems/dialogue_balloon.tscn" id="2_3a36s"]
[ext_resource type="Texture2D" uid="uid://8d2nx66283b8" path="res://Sprites/Characters/nurse_idle_1.png" id="3_xv1ce"]
[ext_resource type="FontFile" uid="uid://bhk1o8rm4rhnv" path="res://Fonts/LibreBaskerville-Regular.ttf" id="4_up3c2"]
[ext_resource type="Texture2D" uid="uid://b2kalbkmuynpk" path="res://Sprites/Characters/nurse_idle_2.png" id="4_vcrtp"]
[ext_resource type="AudioStream" uid="uid://cnge00cjjj71a" path="res://Audio/mixkit-natural-ambience-with-flowing-water-and-birds-61.wav" id="6_1l7fp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uveko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xv1ce")
}, {
"duration": 1.0,
"texture": ExtResource("4_vcrtp")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eeaeo"]
size = Vector2(464, 468)

[node name="NpcTemplate" type="Node2D"]
scale = Vector2(0.68, 0.68)
script = ExtResource("1_67dak")
npcName = "test"

[node name="DialogueBalloon" parent="." instance=ExtResource("2_3a36s")]
position = Vector2(-277.941, -447.059)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(11.7647, -7.35294)
scale = Vector2(0.61172, 0.61172)
sprite_frames = SubResource("SpriteFrames_uveko")
frame = 1
frame_progress = 0.90671

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5, -62)
shape = SubResource("RectangleShape2D_eeaeo")

[node name="InteractLabel" type="Label" parent="."]
offset_left = -48.5294
offset_top = -220.588
offset_right = 61.4706
offset_bottom = -180.588
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_up3c2")
theme_override_font_sizes/font_size = 25
text = "[ENTER]"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1l7fp")
volume_db = -12.0
autoplay = true
max_distance = 100000.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
